--- a/package.json
+++ b/package.json
@@ -11,11 +11,8 @@
 	},
 	"packageManager": "pnpm@7.1.3",
 	"engines": {
-		"node": "^17.0.0",
+		"node": "^18.0.0",
 		"pnpm": "^7.0.0"
 	},
-	"type": "module",
-	"devDependencies": {
-		"typescript": "^4.7.2"
-	}
+	"type": "module"
 }
