--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@pokard/worker",
+	"name": "@pokard/api",
 	"version": "1.0.0",
 	"main": "src/index.ts",
 	"private": true,
@@ -7,14 +7,13 @@
 		"dev": "wrangler dev src/index.ts",
 		"deploy": "wrangler publish src/index.ts"
 	},
-	"license": "MIT",
 	"devDependencies": {
-		"@pokard/messages": "workspace:*",
-		"@cloudflare/workers-types": "^3.11.0",
-		"typescript": "^4.6.4",
-		"wrangler": "^2.0.6"
+		"@cloudflare/workers-types": "^3.12.0",
+		"@pokard/models": "workspace:*",
+		"typescript": "^4.7.3",
+		"wrangler": "^2.0.12"
 	},
 	"dependencies": {
-		"hono": "^1.3.6"
+		"hono": "^1.4.7"
 	}
 }
