--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -12,14 +12,14 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@pokard/messages": "workspace:*",
+		"@pokard/models": "workspace:*",
 		"@sveltejs/adapter-static": "1.0.0-next.31",
 		"@sveltejs/kit": "next",
-		"svelte": "^3.44.0",
-		"svelte-check": "^2.2.6",
-		"svelte-preprocess": "^4.10.1",
-		"tslib": "^2.3.1",
-		"typescript": "~4.6.2"
+		"svelte": "^3.48.0",
+		"svelte-check": "^2.7.2",
+		"svelte-preprocess": "^4.10.7",
+		"tslib": "^2.4.0",
+		"typescript": "~4.6.4"
 	},
 	"type": "module",
 	"dependencies": {
